# glowgreen

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  close_contact_original.txt  docs_instructions.txt  howto_documentation.md  overview.rst  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  overview.rst
src/: example_restriction_periods.py  example_restriction_periods_short.py  glowgreen_sample.py  glowgreen_weeklypattern.py  glowgreen_weeklypattern2.py  personalised_thyrotox.py  plot_cs_patterns.py  testLoop.py
src/glowgreen/: __init__.py  clearance.py  close_contact.py  close_contact_original.py  contact pattern plotting test.py
test/: test_clearance.py  test_close_contact.py  test_contact_pattern.py  test_contact_pattern_onceoff.py  test_contact_pattern_repeating.py  test_contact_pattern_repeating_week.py
